--- a/Visionarytics.ipynb
+++ b/Visionarytics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7BsP59n4L/fAYrRI9Ww3B",
+      "authorship_tag": "ABX9TyNM/On0gGUgg1Q8kKLBQ+cT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mahb97/Howl-Ginsberg-I-miss-u-cassidy/blob/main/Visionarytics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mahb97/Howl-Ginsberg-poemsssss/blob/main/Visionarytics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -123,7 +123,7 @@
         "tok  = AutoTokenizer.from_pretrained(model_name)\n",
         "ft   = PeftModel.from_pretrained(base, \"/content/tinyllama-ginsberg-lora\")\n",
         "\n",
-        "prompt = \"Write a free-verse poem about night buses and sodium streetlights.\\n\\n\"\n",
+        "prompt = \"Write a poem about cobblestones and rain.\\n\\n\"\n",
         "ids = tok(prompt, return_tensors=\"pt\").to(ft.device)\n",
         "streamer = TextStreamer(tok)\n",
         "out = ft.generate(\n",
